[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/ennemy_1.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 36.0

[node name="Enemy" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )
verticalSpeed = 55
health = 10

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.54648e-06, -0.499999 )
scale = Vector2( 3.2, 3.25 )

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
